@@ -1,9 +1,6 @@
-#### Internal RPC framework (highlighted by its simplicity)
+# rpc
 
-+ This module provides a set of RPC communication system based on Netty, including server, client, and corresponding
-  calling demos.
-+ This module provides a Netty-based RPC communication system, including server, client, and corresponding demo for
-  invocation.
-+ Support TCP and UDP.
-+ The JVM needs to add startup parameters:--add-exports java.base/jdk.internal.misc=ALL-UNNAMED
++ 本模块提供了一套基于netty的rpc通信系统，包括server、client，以及提供对应的调用demo。
++ 官网地址：https://xmmione.be.mi.com/web/index
++ 支持tcp and udp
 
